--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,13 +6,17 @@
 
 .header{
     height: 60px;
-    width: 100vw;
-    background-color: blueviolet;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.950);
+    color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-content: center;
     align-items: center;
+    padding: 0% 10%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px ;
+    
 
 }
 
@@ -20,7 +24,27 @@
     color: white;
     font-size: 30px;
 }
-.cart-section{
+.box2{
+    height: 90%;
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    align-items: center;
     color: white;
     font-size: 30px;
+}
+
+Link{
+    text-decoration: none;
+    color: white;
+}
+
+.shop{
+    padding: 10px;
+}
+
+.cart{
+    padding: 10px;
 }
