--- a/src/pages/cart.css
+++ b/src/pages/cart.css
@@ -1,21 +1,4 @@
-.products{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-}
-
-
-
-
-
-
-
-.login-container{
+.container1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 100%;
     height: 100%;
@@ -28,7 +11,21 @@
    
   }
 
-  .login{
+  .heading1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 40px;
+    width: 40%;
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 15px;
+     margin-bottom: 30%;
+  }
+
+  .address{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -40,22 +37,24 @@
     border-radius: 5px;
     font-size: 18px;
     padding: 5px;
+    text-align: center;
     cursor: pointer;
   }
 
-  .login-link{
+  .address-link{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     align-content: center;
+    text-align: center;
     height: 50px;
     width: 30%;
     background-color: rgb(255, 183, 0);
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 15px;
     padding: 5px;
     cursor: pointer;
-    color: black;
     text-decoration: none;
+    color: black;
   }
